# robotstxt-ocaml

./: .gitignore  CHANGES.md  README.md  RELEASE.md  dune-project  robotstxt.opam
.github/workflows/: ci.yml
config/: discover.ml
lib/: dune  robotstxt.ml  robotstxt.mli  robotstxt_stubs.cc
lib/compat/absl/base/: macros.h
lib/compat/absl/container/: fixed_array.h
lib/compat/absl/strings/: ascii.h  match.h  numbers.h  string_view.h
test/: dune  test_robotstxt.ml
