(include_subdirs unqualified)

(library
 (name robotstxt)
 (public_name robotstxt)
 (foreign_stubs
  (language cxx)
  (names robots robotstxt_stubs)
  (flags
   (:standard -std=c++17 -Wall -Wextra -Wno-unused-parameter))
  (include_dirs vendor compat))
 (c_library_flags
  (:standard
   (:include cxx_link_flags.sexp))))

(rule
 (targets cxx_link_flags.sexp)
 (action
  (run ../config/discover.exe)))
